Added train-test sets. Preprocessing complete

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "└────────────┴───────────┴─────────┴───────────┴───┴───────────┴───────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "['credit_application_date', 'activity_date_36_month_1_no_aggregation']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        " 'location_cluster_02_month_1_no_aggregation']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "└───────┴────────────┴─────────┴────────────┴───┴────────────┴────────────┴────────────┴───────────┘"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        " 'device_technology_2_month_1_no_aggregation']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>location_work_null_month_9_no_aggregation</th><th>count</th></tr><tr><td>f64</td><td>u32</td></tr></thead><tbody><tr><td>null</td><td>4620</td></tr><tr><td>28.0</td><td>12047</td></tr><tr><td>29.5569</td><td>8333</td></tr></tbody></table></div>"
+       "<small>shape: (3, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>location_work_null_month_9_no_aggregation</th><th>count</th></tr><tr><td>f64</td><td>u32</td></tr></thead><tbody><tr><td>null</td><td>4620</td></tr><tr><td>29.5569</td><td>8333</td></tr><tr><td>28.0</td><td>12047</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (3, 2)\n",
@@ -333,12 +333,12 @@
        "│ f64                             ┆ u32   │\n",
        "╞═════════════════════════════════╪═══════╡\n",
        "│ null                            ┆ 4620  │\n",
-       "│ 28.0                            ┆ 12047 │\n",
        "│ 29.5569                         ┆ 8333  │\n",
+       "│ 28.0                            ┆ 12047 │\n",
        "└─────────────────────────────────┴───────┘"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (10, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>location_cluster_03_month_1_most_frequent</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;REGION_1&quot;</td><td>365</td></tr><tr><td>&quot;REGION_5&quot;</td><td>1812</td></tr><tr><td>&quot;REGION_6&quot;</td><td>1197</td></tr><tr><td>&quot;REGION_8&quot;</td><td>1751</td></tr><tr><td>&quot;REGION_2&quot;</td><td>540</td></tr><tr><td>&quot;REGION_3&quot;</td><td>463</td></tr><tr><td>&quot;REGION_4&quot;</td><td>1309</td></tr><tr><td>&quot;REGION_9&quot;</td><td>10925</td></tr><tr><td>null</td><td>2493</td></tr><tr><td>&quot;REGION_7&quot;</td><td>4145</td></tr></tbody></table></div>"
+       "<small>shape: (10, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>location_cluster_03_month_1_most_frequent</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;REGION_4&quot;</td><td>1309</td></tr><tr><td>&quot;REGION_1&quot;</td><td>365</td></tr><tr><td>&quot;REGION_9&quot;</td><td>10925</td></tr><tr><td>null</td><td>2493</td></tr><tr><td>&quot;REGION_5&quot;</td><td>1812</td></tr><tr><td>&quot;REGION_3&quot;</td><td>463</td></tr><tr><td>&quot;REGION_8&quot;</td><td>1751</td></tr><tr><td>&quot;REGION_7&quot;</td><td>4145</td></tr><tr><td>&quot;REGION_6&quot;</td><td>1197</td></tr><tr><td>&quot;REGION_2&quot;</td><td>540</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (10, 2)\n",
@@ -372,20 +372,20 @@
        "│ ---                             ┆ ---   │\n",
        "│ str                             ┆ u32   │\n",
        "╞═════════════════════════════════╪═══════╡\n",
-       "│ REGION_1                        ┆ 365   │\n",
-       "│ REGION_5                        ┆ 1812  │\n",
-       "│ REGION_6                        ┆ 1197  │\n",
-       "│ REGION_8                        ┆ 1751  │\n",
-       "│ REGION_2                        ┆ 540   │\n",
-       "│ REGION_3                        ┆ 463   │\n",
        "│ REGION_4                        ┆ 1309  │\n",
+       "│ REGION_1                        ┆ 365   │\n",
        "│ REGION_9                        ┆ 10925 │\n",
        "│ null                            ┆ 2493  │\n",
+       "│ REGION_5                        ┆ 1812  │\n",
+       "│ REGION_3                        ┆ 463   │\n",
+       "│ REGION_8                        ┆ 1751  │\n",
        "│ REGION_7                        ┆ 4145  │\n",
+       "│ REGION_6                        ┆ 1197  │\n",
+       "│ REGION_2                        ┆ 540   │\n",
        "└─────────────────────────────────┴───────┘"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (4, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>contract_type_1_month_1_no_aggregation</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;TYPE_1&quot;</td><td>10506</td></tr><tr><td>&quot;TYPE_2&quot;</td><td>3598</td></tr><tr><td>null</td><td>8984</td></tr><tr><td>&quot;TYPE_3&quot;</td><td>1912</td></tr></tbody></table></div>"
+       "<small>shape: (4, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>contract_type_1_month_1_no_aggregation</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;TYPE_3&quot;</td><td>1912</td></tr><tr><td>&quot;TYPE_2&quot;</td><td>3598</td></tr><tr><td>&quot;TYPE_1&quot;</td><td>10506</td></tr><tr><td>null</td><td>8984</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (4, 2)\n",
@@ -419,14 +419,14 @@
        "│ ---                             ┆ ---   │\n",
        "│ str                             ┆ u32   │\n",
        "╞═════════════════════════════════╪═══════╡\n",
-       "│ TYPE_1                          ┆ 10506 │\n",
-       "│ TYPE_2                          ┆ 3598  │\n",
-       "│ null                            ┆ 8984  │\n",
        "│ TYPE_3                          ┆ 1912  │\n",
+       "│ TYPE_2                          ┆ 3598  │\n",
+       "│ TYPE_1                          ┆ 10506 │\n",
+       "│ null                            ┆ 8984  │\n",
        "└─────────────────────────────────┴───────┘"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (2, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>default</th><th>proportion</th></tr><tr><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>0.0</td><td>0.825221</td></tr><tr><td>1.0</td><td>0.174779</td></tr></tbody></table></div>"
+       "<small>shape: (2, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>default</th><th>proportion</th></tr><tr><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1.0</td><td>0.174779</td></tr><tr><td>0.0</td><td>0.825221</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (2, 2)\n",
@@ -460,12 +460,12 @@
        "│ ---     ┆ ---        │\n",
        "│ f64     ┆ f64        │\n",
        "╞═════════╪════════════╡\n",
-       "│ 0.0     ┆ 0.825221   │\n",
        "│ 1.0     ┆ 0.174779   │\n",
+       "│ 0.0     ┆ 0.825221   │\n",
        "└─────────┴────────────┘"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "(datetime.date(2021, 9, 1), datetime.date(2022, 10, 1), 14)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
        "{Float64: 252, String: 5}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "└───────────┴───────────┴───────────┴──────────┴───┴───────────┴───────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "└─────────────────────────────────┴─────────┴────────────┴─────────────────┘"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "└────────────┴───────────┴─────────┴───────────┴───┴───────────┴───────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
        "[11025 rows x 3 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        " 'entropy_contacts_weekend_last_': 1}"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
        " ('location_work_null_month_', 'mobility_pattern_')]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1098,35 +1098,35 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (10, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>location_cluster_03_month_1_most_frequent</th><th>default</th></tr><tr><td>str</td><td>f64</td></tr></thead><tbody><tr><td>&quot;REGION_4&quot;</td><td>170.0</td></tr><tr><td>&quot;REGION_3&quot;</td><td>57.0</td></tr><tr><td>&quot;REGION_6&quot;</td><td>135.0</td></tr><tr><td>&quot;REGION_8&quot;</td><td>262.0</td></tr><tr><td>&quot;REGION_2&quot;</td><td>79.0</td></tr><tr><td>null</td><td>451.0</td></tr><tr><td>&quot;REGION_5&quot;</td><td>234.0</td></tr><tr><td>&quot;REGION_9&quot;</td><td>1423.0</td></tr><tr><td>&quot;REGION_1&quot;</td><td>49.0</td></tr><tr><td>&quot;REGION_7&quot;</td><td>587.0</td></tr></tbody></table></div>"
+       "<small>shape: (10, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>location_cluster_03_month_1_most_frequent</th><th>default</th><th>uuid</th><th>default_rate</th></tr><tr><td>str</td><td>f64</td><td>u32</td><td>f64</td></tr></thead><tbody><tr><td>&quot;REGION_6&quot;</td><td>135.0</td><td>1197</td><td>0.112782</td></tr><tr><td>&quot;REGION_8&quot;</td><td>262.0</td><td>1751</td><td>0.149629</td></tr><tr><td>&quot;REGION_4&quot;</td><td>170.0</td><td>1309</td><td>0.12987</td></tr><tr><td>&quot;REGION_7&quot;</td><td>587.0</td><td>4145</td><td>0.141616</td></tr><tr><td>&quot;REGION_3&quot;</td><td>57.0</td><td>463</td><td>0.12311</td></tr><tr><td>&quot;REGION_1&quot;</td><td>49.0</td><td>365</td><td>0.134247</td></tr><tr><td>null</td><td>451.0</td><td>2493</td><td>0.180907</td></tr><tr><td>&quot;REGION_2&quot;</td><td>79.0</td><td>540</td><td>0.146296</td></tr><tr><td>&quot;REGION_5&quot;</td><td>234.0</td><td>1812</td><td>0.129139</td></tr><tr><td>&quot;REGION_9&quot;</td><td>1423.0</td><td>10925</td><td>0.130252</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (10, 2)\n",
-       "┌─────────────────────────────────┬─────────┐\n",
-       "│ location_cluster_03_month_1_mo… ┆ default │\n",
-       "│ ---                             ┆ ---     │\n",
-       "│ str                             ┆ f64     │\n",
-       "╞═════════════════════════════════╪═════════╡\n",
-       "│ REGION_4                        ┆ 170.0   │\n",
-       "│ REGION_3                        ┆ 57.0    │\n",
-       "│ REGION_6                        ┆ 135.0   │\n",
-       "│ REGION_8                        ┆ 262.0   │\n",
-       "│ REGION_2                        ┆ 79.0    │\n",
-       "│ null                            ┆ 451.0   │\n",
-       "│ REGION_5                        ┆ 234.0   │\n",
-       "│ REGION_9                        ┆ 1423.0  │\n",
-       "│ REGION_1                        ┆ 49.0    │\n",
-       "│ REGION_7                        ┆ 587.0   │\n",
-       "└─────────────────────────────────┴─────────┘"
+       "shape: (10, 4)\n",
+       "┌─────────────────────────────────┬─────────┬───────┬──────────────┐\n",
+       "│ location_cluster_03_month_1_mo… ┆ default ┆ uuid  ┆ default_rate │\n",
+       "│ ---                             ┆ ---     ┆ ---   ┆ ---          │\n",
+       "│ str                             ┆ f64     ┆ u32   ┆ f64          │\n",
+       "╞═════════════════════════════════╪═════════╪═══════╪══════════════╡\n",
+       "│ REGION_6                        ┆ 135.0   ┆ 1197  ┆ 0.112782     │\n",
+       "│ REGION_8                        ┆ 262.0   ┆ 1751  ┆ 0.149629     │\n",
+       "│ REGION_4                        ┆ 170.0   ┆ 1309  ┆ 0.12987      │\n",
+       "│ REGION_7                        ┆ 587.0   ┆ 4145  ┆ 0.141616     │\n",
+       "│ REGION_3                        ┆ 57.0    ┆ 463   ┆ 0.12311      │\n",
+       "│ REGION_1                        ┆ 49.0    ┆ 365   ┆ 0.134247     │\n",
+       "│ null                            ┆ 451.0   ┆ 2493  ┆ 0.180907     │\n",
+       "│ REGION_2                        ┆ 79.0    ┆ 540   ┆ 0.146296     │\n",
+       "│ REGION_5                        ┆ 234.0   ┆ 1812  ┆ 0.129139     │\n",
+       "│ REGION_9                        ┆ 1423.0  ┆ 10925 ┆ 0.130252     │\n",
+       "└─────────────────────────────────┴─────────┴───────┴──────────────┘"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.group_by(\"location_cluster_03_month_1_most_frequent\").agg(pl.col(\"default\").sum())"
+    "df.group_by(\"location_cluster_03_month_1_most_frequent\").agg(pl.col(\"default\").sum(), pl.col(\"uuid\").count()).with_columns((pl.col(\"default\")/pl.col(\"uuid\")).alias(\"default_rate\"))"
    ]
   }
  ],
