--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -55,32 +55,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "\n",
-    "class Transform_dtype(BaseEstimator, TransformerMixin):\n",
-    "\n",
-    "    def __init__(self, column_name):\n",
-    "        self.column_name = column_name\n",
-    "\n",
-    "    def fit(self, X, y=None):\n",
-    "        return self  # The fit method typically does nothing for transformers\n",
-    "    \n",
-    "    def transform(self, X):\n",
-    "        X_transformed = X.copy()  # Copy the input DataFrame to avoid modifying the original\n",
-    "        X_transformed[self.column_name] = pd.to_datetime(X_transformed[self.column_name]) \n",
-    "        return X_transformed"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## <a id='toc1_2_'></a>[Read Preprocessed data](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define file path\n",
+    "path = \"../data/raw/\"\n",
+    "X_train_path, y_train_path = \n",
+    "X_test_path, y_test_path = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read data\n",
+    "df = pl.read_csv(path + raw_file)"
    ]
   },
   {
