EDA section completed in readme.md

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -24,6 +24,7 @@
     "      - [Constant and Quasi-constant features](#toc1_3_2_4_)    \n",
     "      - [Correlated features](#toc1_3_2_5_)    \n",
     "    - [Transform](#toc1_3_3_)    \n",
+    "      - [Imputer](#toc1_3_3_1_)    \n",
     "\n",
     "<!-- vscode-jupyter-toc-config\n",
     "\tnumbering=false\n",
@@ -413,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Imputer"
+    "#### <a id='toc1_3_3_1_'></a>[Imputer](#toc0_)"
    ]
   },
   {
