Preprocessing section written in readme.md

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -24,7 +24,8 @@
     "      - [Constant and Quasi-constant features](#toc1_3_2_4_)    \n",
     "      - [Correlated features](#toc1_3_2_5_)    \n",
     "    - [Transform](#toc1_3_3_)    \n",
-    "      - [Imputer](#toc1_3_3_1_)    \n",
+    "      - [One hot encoder](#toc1_3_3_1_)    \n",
+    "      - [Imputer](#toc1_3_3_2_)    \n",
     "\n",
     "<!-- vscode-jupyter-toc-config\n",
     "\tnumbering=false\n",
@@ -271,6 +272,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6498255940701984"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape[0]/known_set.shape[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -414,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <a id='toc1_3_3_1_'></a>[Imputer](#toc0_)"
+    "#### <a id='toc1_3_3_1_'></a>[One hot encoder](#toc0_)"
    ]
   },
   {
@@ -438,13 +459,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "One hot encoder"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -455,6 +469,13 @@
     "\n",
     "X_train = OH_transformer.transform(X_train)\n",
     "X_test = OH_transformer.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <a id='toc1_3_3_2_'></a>[Imputer](#toc0_)"
    ]
   },
   {
