--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,10 @@
     "Scaler.fit(X_train)\n",
     "\n",
     "X_train.loc[:,:] =Scaler.transform(X_train)\n",
-    "X_val.loc[:,:] =Scaler.transform(X_val)"
+    "X_val.loc[:,:] =Scaler.transform(X_val)\n",
+    "\n",
+    "# Save scaler\n",
+    "pickle.dump(Scaler, open(\"../configs/R_scaler.pkl\", 'wb'))"
    ]
   },
   {
